--- a/dualrange.css
+++ b/dualrange.css
@@ -27,7 +27,8 @@
   width: 100%;
   height: 20px;
   background-color: #070301;
-  border: 1px solid red;
+  border: 1px solid #A22D0C;
+  padding-right:5px;
 }
 
 .rangebg {
